--- a/html 20211012/htmlstart.html
+++ b/html 20211012/htmlstart.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
+    <!-- <meta charset="UTF-8"> -->
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=h, initial-scale=1.0">
     <title>Document</title>
@@ -9,5 +9,6 @@
 <body>
     <h1>안녕하세요. 오랜만이야??????</h1>
     <p>계속 올리는거 가능~</p>
+    <p style="color: crimson;">?????집에 보내줘요..</p>
 </body>
 </html>
